--- a/src/styles-comp/style.css
+++ b/src/styles-comp/style.css
@@ -188,7 +188,7 @@
 .Header-Topbar-Dark-mode-toggle {
   align-items: top;
   justify-content: top;
-  margin: 0px 0px 25px 10px;
+  margin: 0px 0px 32px 10px;
   background: #ffffff;
   border: none;
   cursor: pointer;
